updated about and style

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 	<title>About · Jayme Hoffman</title>
 	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +9,28 @@
 
 <body>
 <div id="main">
+	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>About me</h1>
 
-  <p>Hi, I’m Jayme Hoffman — I’m a product designer, developer, and entrepreneur. I founded Launcher Labs, where we made <a href="https://www.launchcaster.xyz/">Launchcaster</a> (a crypto product hunt), Frameboard (a visual curation app and protocol), and Maindrop (Venmo for sending NFTs). Before that, I founded <a href="https://fohandboh.com/">Fohandboh</a> (acquired by JobGet) and Homeward.io (acquired by Keller Williams), and led consumer products for KWRI.</p>
-	
-  <h3>Products shipped</h3>
-
+  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A YC and a16z-backed crypto company. Before that, I helped found Fohandboh (acquired by JobGet), Realput, and Homeward.io (acquired by Keller Williams) and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking.</p>
+  
+  <h3>Working on now?</h3>
+  <p>I'm currently exploring what's next, mostly in climate, ai, and crypto. I'm sharing my learnings along the way on <a href="https://twitter.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme/">Farcaster</a></p>
+  
+  <h3>Produces shipped</h3>
   <ul>
 	<li>
 	  <p>Co-founder &amp; CEO, <a href="https://www.launcher.xyz/">Launcher Labs</a> - March 2022</p>
   
 	  <ul>
 		<li>
-		  <p><a href="https://www.launchcaster.xyz/">Launchcaster</a> - crypto product hunt</p>
+		  <p><a href="https://www.launchcaster.xyz/">Launchcaster</a> - Crypto Product Hunt</p>
 		</li>
 		<li>
-		  <p><a href="https://www.frameboard.com/">Frameboard</a> - app and protocol for visual curation</p>
+		  <p><a href="https://www.frameboard.com/">Frameboard</a> - Crypto Pinterest</p>
 		</li>
 		<li>
-		  <p><a href="https://www.launcher.xyz/create">Launcher Actions</a> - Smart contract-based mini-app platform</p>
+		  <p><a href="https://www.launcher.xyz/create">Launcher Actions</a> - Smart contract mini-apps</p>
 		</li>
 		<li>
 		  <p><a href="https://www.maindrop.xyz/">Maindrop</a> - Venmo for sending NFTs</p>
@@ -38,7 +41,7 @@
 	  </ul>
 	</li>
 	<li>
-	  <p>Founder &amp; CEO, <a href="http://newzip.com/">Newzip YC W21</a> - January 2021</p>
+	  <p>Founder &amp; CEO, <a href="http://newzip.com/">Newzip</a> - January 2021</p>
   
 	  <ul>
 		<li>
@@ -53,7 +56,7 @@
 	  <p>Founding Advisor, <a href="https://www.realput.com/">Realput</a> - December 2020</p>
   
 	  <ul>
-		<li>World’s first labor marketplace for real estate pros</li>
+		<li>Marketplace for real estate jobs</li>
 	  </ul>
 	</li>
 	<li>
@@ -61,7 +64,7 @@
   
 	  <ul>
 		<li>
-		  <p>Hospitality labor marketplace</p>
+		  <p>Marketplace for hospitality jobs</p>
 		</li>
 		<li>
 		  <p>Hospitality employer search</p>
@@ -72,14 +75,14 @@
 	  </ul>
 	</li>
 	<li>
-	  <p><a href="https://www.linkedin.com/posts/jaymehoffman_make-impact-in-real-estate-check-i-activity-6641050799554256896-f4II">Consumer PM</a>, Keller Williams Realty - May 2018</p>
+	  <p>PM Consumer Products, <a href="https://www.linkedin.com/posts/jaymehoffman_make-impact-in-real-estate-check-i-activity-6641050799554256896-f4II">KWRI</a> - May 2018</p>
   
 	  <ul>
 		<li>
-		  <p><a href="https://apps.apple.com/us/app/kw-buy-sell-real-estate/id652512924">KW App</a></p>
+			<p><a href="https://kw.com/">KW.com</a></p>
 		</li>
 		<li>
-		  <p><a href="https://kw.com/">KW.com</a></p>
+		  <p><a href="https://apps.apple.com/us/app/kw-buy-sell-real-estate/id652512924">KW App</a></p>
 		</li>
 		<li>
 		  <p>Agent Sites - World’s largest agent website creator</p>
@@ -96,7 +99,7 @@
 	  <p>Side project, <a href="https://web.archive.org/web/20171223074521/http://texastoken.com/">Texas Token</a> - December 2017</p>
   
 	  <ul>
-		<li>Open directory of top blockchain projects and people in Texas</li>
+		<li>Open directory of crypto projects and people in Texas</li>
 	  </ul>
 	</li>
 	<li>
@@ -104,7 +107,7 @@
   
 	  <ul>
 		<li>
-		  <p>Home inspection marketplace</p>
+		  <p> Marketplace for home inspections</p>
 		</li>
 		<li>
 		  <p>Transaction dashboard</p>
