--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 	
     <h3>Links</h3>
 	<ul>
-		<li><a href="about.html">About me</a></li>
-		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
-		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
+		<li><a href="/about/">About me</a></li>
+		<li>X: <a href="https://x.com/jaymehoffman/">@jaymehoffman</a></li>
+		<li>Farcaster: <a href="https://warpcast.com/jayme">@jayme</a></li>
 	</ul>
 
     <h3>Posts on X</h3>
     <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <!--<a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
 </div> 
 </body>
