updated title to fit on mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="main">
   <h1>Jayme Hoffman</h1>
 
-	<p>I'm a product designer, developer, and entrepreneur.</p>
+	<p>Product designer, developer, and entrepreneur.</p>
 	
     <h3>Links</h3>
 	<ul>
