Added meta tags

--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,20 @@
 	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://jaymehoffman.com/about/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="About - Jayme Hoffman">
+	<meta property="og:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
+	<meta property="og:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@jaymehoffman">
+	<meta name="twitter:title" content="About - Jayme Hoffman">
+	<meta name="twitter:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
+	<meta name="twitter:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
 </head>
 
 <body>
@@ -15,7 +29,7 @@
   <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A YC and a16z-backed crypto company. Before that, I helped found Fohandboh (acquired by JobGet), Realput, and Homeward.io (acquired by Keller Williams) and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking.</p>
   
   <h3>Working on now?</h3>
-  <p>I'm currently exploring what's next, mostly in climate, ai, and crypto. I'm sharing my learnings along the way on <a href="https://twitter.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme/">Farcaster</a></p>
+  <p>I'm currently exploring what's next, mostly in climate, ai, and crypto.</p>
   
   <h3>Produces shipped</h3>
   <ul>
@@ -96,13 +110,6 @@
 	  </ul>
 	</li>
 	<li>
-	  <p>Side project, <a href="https://web.archive.org/web/20171223074521/http://texastoken.com/">Texas Token</a> - December 2017</p>
-  
-	  <ul>
-		<li>Open directory of crypto projects and people in Texas</li>
-	  </ul>
-	</li>
-	<li>
 	  <p>Co-founder &amp; CEO, <a href="https://homeward.io/">Homeward.io</a> (Acquired by Keller Williams) - August. 2016</p>
   
 	  <ul>
@@ -110,19 +117,7 @@
 		  <p> Marketplace for home inspections</p>
 		</li>
 		<li>
-		  <p>Transaction dashboard</p>
-		</li>
-	  </ul>
-	</li>
-	<li>
-	  <p>CEO, <a href="https://angel.co/buyhappy">BuyHappy</a> - June 2014</p>
-  
-	  <ul>
-		<li>
-		  <p>Price intelligence dashboard</p>
-		</li>
-		<li>
-		  <p>Best-price browser extension</p>
+		  <p>Real estate transaction dashboard</p>
 		</li>
 	  </ul>
 	</li>
