--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://jaymehoffman.com/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Jayme Hoffman">
+	<meta property="og:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
+	<meta property="og:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@jaymehoffman">
+	<meta name="twitter:title" content="Jayme Hoffman">
+	<meta name="twitter:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
+	<meta name="twitter:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
 </head>
 
 <body>
