--- a/about/index.html
+++ b/about/index.html
@@ -25,17 +25,13 @@
 <div id="main">
 	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>About me</h1>
-
   <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A YC and a16z-backed crypto company. Before that, I helped found Fohandboh (acquired by JobGet), Realput, and Homeward.io (acquired by Keller Williams) and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking.</p>
-  
   <h3>Working on now?</h3>
-  <p>I'm currently exploring what's next, mostly in climate, ai, and crypto.</p>
-  
+  <p>I'm currently exploring what's next and sharing random findings on <a href="https://x.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme">Farcaster</a>.</p>
   <h3>Produces shipped</h3>
   <ul>
 	<li>
 	  <p>Co-founder &amp; CEO, <a href="https://www.launcher.xyz/">Launcher Labs</a> - March 2022</p>
-  
 	  <ul>
 		<li>
 		  <p><a href="https://www.launchcaster.xyz/">Launchcaster</a> - Crypto Product Hunt</p>
@@ -68,7 +64,6 @@
 	</li>
 	<li>
 	  <p>Founding Advisor, <a href="https://www.realput.com/">Realput</a> - December 2020</p>
-  
 	  <ul>
 		<li>Marketplace for real estate jobs</li>
 	  </ul>
@@ -123,7 +118,6 @@
 	</li>
 	<li>
 	  <p>Co-founder &amp; CEO, <a href="https://angel.co/acacia">Acacia Interactive</a> - July 2012</p>
-  
 	  <ul>
 		<li>
 		  <p>Fetch - share animated messaging</p>
