--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
   <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A YC and a16z-backed crypto company. Before that, I helped found Fohandboh (acquired by JobGet), Realput, and Homeward.io (acquired by Keller Williams) and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking.</p>
   <h3>Working on now?</h3>
   <p>I'm currently exploring what's next and sharing random findings on <a href="https://x.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme">Farcaster</a>.</p>
-  <h3>Produces shipped</h3>
+  <h3>Products shipped</h3>
   <ul>
 	<li>
 	  <p>Co-founder &amp; CEO, <a href="https://www.launcher.xyz/">Launcher Labs</a> - March 2022</p>
