--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <h3>Links</h3>
 	<ul>
 		<li><a href="/about/">About me</a></li>
-		<li>X: <a href="https://x.com/jaymehoffman/">@jaymehoffman</a></li>
-		<li>Farcaster: <a href="https://warpcast.com/jayme">@jayme</a></li>
+		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
+		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
+		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">in/JaymeHoffman</a></li>
 	</ul>
 
     <h3>Posts on X</h3>
