--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <div id="main">
   <h1>Jayme Hoffman</h1>
 
-	<p>Product designer, developer, and entrepreneur.</p>
+	<p>Product designer, developer, and entrepreneur. More <a href="/about/">about me</a>.</p>
 	
     <h3>Links</h3>
 	<ul>
-		<li><a href="/about/">About me</a></li>
-		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
+		<li><a href="https://blog.jaymehoffman.com/">Blog</a></li>
 		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
+		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">in/JaymeHoffman</a></li>
 	</ul>
 
