--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 <div id="main">
 	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>About me</h1>
-  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A YC and a16z-backed crypto company. Before that, I helped found Fohandboh (acquired by JobGet), Realput, and Homeward.io (acquired by Keller Williams) and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking.</p>
+  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A Y Combinator and a16z-backed crypto company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and Realput and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking in Texas.</p>
   <h3>Working on now?</h3>
   <p>I'm currently exploring what's next and sharing random findings on <a href="https://x.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme">Farcaster</a>.</p>
   <h3>Products shipped</h3>
