--- a/lists/index.html
+++ b/lists/index.html
@@ -23,7 +23,7 @@
 <div id="main">
 	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>Lists</h1>
-  <p>Here's a list of great lists I value.</p>
+  <p>Here's a list of lists I love.</p>
   <ul>
 	<li>
 	  <p><a href="https://stevepulec.com/posts/small/">Small Teams</a> - Impressive things accomplished by small teams.</p>
@@ -31,6 +31,9 @@
 	<li>
 	  <p><a href="https://patrickcollison.com/fast">Fast Teams</a> - Examples of people quickly accomplishing ambitious things together.</p>
 	</li>
+	<li>
+		<p><a href="https://danromero.org/crypto-reading/">Crypto Reading</a> - A list of worthwhile posts about cryptocurrency from Dan Romero.</p>
+	  </li>
   </ul>
 </div> 
 </body>
