--- a/lists/index.html
+++ b/lists/index.html
@@ -23,17 +23,20 @@
 <div id="main">
 	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>Lists</h1>
-  <p>Here's a list of lists I love.</p>
+  <p>A list of lists I love.</p>
   <ul>
 	<li>
-	  <p><a href="https://stevepulec.com/posts/small/">Small Teams</a> - Impressive things accomplished by small teams.</p>
+		<p><a href="https://stevepulec.com/posts/small/">Small Teams</a> - Impressive things accomplished by small teams.</p>
 	</li>
 	<li>
-	  <p><a href="https://patrickcollison.com/fast">Fast Teams</a> - Examples of people quickly accomplishing ambitious things together.</p>
+		<p><a href="https://patrickcollison.com/fast">Fast Teams</a> - Examples of people quickly accomplishing ambitious things together.</p>
 	</li>
 	<li>
-		<p><a href="https://danromero.org/crypto-reading/">Crypto Reading</a> - A list of worthwhile posts about cryptocurrency from Dan Romero.</p>
-	  </li>
+		<p><a href="https://danromero.org/crypto-reading/">Crypto Reading</a> - Worthwhile posts about cryptocurrency from Dan Romero.</p>
+	</li>
+	<li>
+		<p><a href="https://web.archive.org/web/20130303172908/http://www.uky.edu/~eushe2/Pajares/OnFailingG.html">They Did Not Give Up</a> - Accomplished people who failed and did not give up.</p>
+	</li>
   </ul>
 </div> 
 </body>
