--- a/about/index.html
+++ b/about/index.html
@@ -1,90 +1,97 @@
 <html>
 <head>
-	<link rel="stylesheet" href="../style.css">
-	<title>About · Jayme Hoffman</title>
-	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-	<!-- Facebook Meta Tags -->
+	<meta name="description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
+	
+	<title>About · Jayme Hoffman</title>
+	
+	<!-- Styles -->
+	<link rel="stylesheet" href="../style.css">
+	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
+	
+	<!-- Open Graph Meta Tags -->
 	<meta property="og:url" content="https://jaymehoffman.com/about/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="About - Jayme Hoffman">
 	<meta property="og:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
 	<meta property="og:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
-
+	
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@jaymehoffman">
 	<meta name="twitter:title" content="About - Jayme Hoffman">
 	<meta name="twitter:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
 	<meta name="twitter:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
+	
+	<!-- Scripts -->
+	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
 <div id="main">
 	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>About me</h1>
-  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A Y Combinator and a16z-backed crypto company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and Realput and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking in Texas.</p>
+  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A Y Combinator and a16zcrypto-backed company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and Realput and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking in Texas.</p>
   <h3>Working on now?</h3>
   <p>I'm currently exploring what's next and sharing random findings on <a href="https://x.com/jaymehoffman/">X</a> and <a href="https://warpcast.com/jayme">Farcaster</a>.</p>
   <h3>Products shipped</h3>
   <ul>
 	<li>
-	  <p>Co-founder &amp; CEO, <a href="https://www.launcher.xyz/">Launcher Labs</a> - March 2022</p>
+	  <p><strong>Launcher Labs</strong> (Co-founder & CEO, March 2022 – October 2024)</p>
 	  <ul>
 		<li>
 		  <p><a href="https://www.launchcaster.xyz/">Launchcaster</a> - Crypto Product Hunt</p>
 		</li>
 		<li>
-		  <p><a href="https://www.frameboard.com/">Frameboard</a> - Crypto Pinterest</p>
+		  <p><a href="https://www.launchcaster.xyz/frameboard">Frameboard</a> - Crypto Pinterest</p>
 		</li>
 		<li>
-		  <p><a href="https://www.launcher.xyz/create">Launcher Actions</a> - Smart contract mini-apps</p>
+		  <p><a href="https://warpcast.com/jayme/0x56827946b604f16d591a93574f6da861963323d6">Launcher Actions</a> - Smart contract mini-apps</p>
 		</li>
 		<li>
-		  <p><a href="https://www.maindrop.xyz/">Maindrop</a> - Venmo for sending NFTs</p>
+			<p><a href="https://dribbble.com/shots/24493292-Launcher-PWA-wallet">Launcher PWA</a> - Bet on mini-apps</p>
 		</li>
 		<li>
-		  <p><a href="https://www.sweetheartz.xyz/">Sweetheartz</a> - Valentine’s Day NFTs</p>
+		  <p><a href="https://www.producthunt.com/products/maindrop#maindrop">Maindrop</a> - Venmo for sending NFTs</p>
+		</li>
+		<li>
+		  <p><a href="https://opensea.io/collection/sweetheartznft">Sweetheartz</a> - Valentine’s Day NFTs</p>
 		</li>
 	  </ul>
 	</li>
 	<li>
-	  <p>Founder &amp; CEO, <a href="http://newzip.com/">Newzip</a> - January 2021</p>
+	  <p><strong>Newzip</strong> (Founder & CEO, January 2021 – March 2022)</p>
   
 	  <ul>
 		<li>
-		  <p>Local creator marketplace and monetization tools</p>
+		  <p><a href="https://dribbble.com/shots/24493351-Newzip-Ask-local-experts-what-it-s-like-there">Marketplace</a> - Connect to local experts for advice</p>
 		</li>
 		<li>
-		  <p>Location-based video and livestream tours</p>
+		  <p><a href="https://www.msevera.com/launcher-labs/newzip-livestream">Video App</a> - TikTok for local video tours</a></p>
 		</li>
 	  </ul>
 	</li>
 	<li>
-	  <p>Founding Advisor, <a href="https://www.realput.com/">Realput</a> - December 2020</p>
+	  <p><strong>Realput</strong> (Founding Advisor, December 2020)</p>
 	  <ul>
 		<li>Marketplace for real estate jobs</li>
 	  </ul>
 	</li>
 	<li>
-	  <p>Founding Advisor, <a href="http://fohandboh.com/">Foh&amp;boh</a> - January 2020</p>
+	  <p><strong>Foh&boh</strong> (Founding Advisor, January 2019)</p>
   
 	  <ul>
 		<li>
-		  <p>Marketplace for hospitality jobs</p>
+		  <p><a href="https://fohandboh.com/source-candidate/#network">Marketplace for hospitality jobs</a></p>
 		</li>
 		<li>
-		  <p>Hospitality employer search</p>
-		</li>
-		<li>
-		  <p>Hospitality job board/posts</p>
+		  <p><a href="https://fohandboh.com/source-candidate/#jobboards">Hospitality job boards</a></p>
 		</li>
 	  </ul>
 	</li>
 	<li>
-	  <p>PM Consumer Products, <a href="https://www.linkedin.com/posts/jaymehoffman_make-impact-in-real-estate-check-i-activity-6641050799554256896-f4II">KWRI</a> - May 2018</p>
+	  <p><strong>Keller Williams</strong> (PM Consumer, May 2018 – December 2020)</p>
   
 	  <ul>
 		<li>
@@ -94,18 +101,18 @@
 		  <p><a href="https://apps.apple.com/us/app/kw-buy-sell-real-estate/id652512924">KW App</a></p>
 		</li>
 		<li>
+			<p>KW Homeownership</p>
+		  </li>
+		<li>
 		  <p>Agent Sites - World’s largest agent website creator</p>
 		</li>
 		<li>
 		  <p>KW Guide + Guide Builder - End-to-end transaction platform</p>
 		</li>
-		<li>
-		  <p>KW Homeownership</p>
-		</li>
 	  </ul>
 	</li>
 	<li>
-	  <p>Co-founder &amp; CEO, <a href="https://homeward.io/">Homeward.io</a> (Acquired by Keller Williams) - August. 2016</p>
+	  <p><strong>Homeward.io</strong> (Co-founder & CEO, August 2016 - April 2018 Acquired by KWRI)</p>
   
 	  <ul>
 		<li>
@@ -117,19 +124,19 @@
 	  </ul>
 	</li>
 	<li>
-	  <p>Co-founder &amp; CEO, <a href="https://angel.co/acacia">Acacia Interactive</a> - July 2012</p>
+	  <p><strong>Acacia Interactive</strong> (Co-founder & CEO, July 2012 – August 2016)</p>
 	  <ul>
 		<li>
-		  <p>Fetch - share animated messaging</p>
+		  <p><a href="https://youtu.be/5WluA7yryto?si=41uPqpMGIsFsblBv">Fetch</a> - Animated messaging</p>
 		</li>
 		<li>
-		  <p>Wax 2.0 - mobile video competitions</p>
+		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/084/45084-42a85d5c875873c9a723a88d46a5c19b9a2c03b3.jpeg?1565316537">Wax 2.0</a> - Mobile video competitions</p>
 		</li>
 		<li>
-		  <p>Kiwi - short square mobile videos</p>
+		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/083/45083-e7374be234b89cc13e302b5aa2df83a07bd5417c.jpeg?1565316537">Kiwi</a> - Short square mobile videos</p>
 		</li>
 		<li>
-		  <p>Wax 1.0 - Tony Hawk IRL video competitions</p>
+		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/082/45082-891b02c541dc8cfda4301900fc239339a57e484c.jpeg?1565316537">Wax 1.0</a> - Tony Hawk IRL video competitions</p>
 		</li>
 	  </ul>
 	</li>
