small change to home

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 <body>
 <div id="main">
   <h1>Jayme Hoffman</h1>
-
 	<p>Product designer, developer, and entrepreneur.</p>
+
+  <h3>Links</h3>
 	<ul>
 		<li><a href="/about/">About me</a></li>
 		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
@@ -41,8 +42,8 @@
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">JaymeHoffman</a></li>
 	</ul>
 
-    <h3>Posts on X</h3>
-    <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader" data-tweet-limit="5" data-dnt="true"></a>
+  <h3>Posts on X</h3>
+  <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader" data-tweet-limit="5" data-dnt="true"></a>
 </div> 
 <script>
 	// Load Twitter widget after page content
