--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
   <h1>About me</h1>
   <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A Y Combinator and a16zcrypto-backed company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and Realput and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking in Texas.</p>
   <h3>Working on now?</h3>
-  <p>I'm currently working on a new consumer product.</p>
+  <p>In January	2025, I started working on a new consumer product. I'll share more about it soon.</p>
   <h3>Products shipped</h3>
   <ul>
 	<li>
