changed home page, navigation and layout

--- a/work/index.html
+++ b/work/index.html
@@ -1,41 +1,22 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
-	
-	<title>About · Jayme Hoffman</title>
-	
-	<!-- Styles -->
-	<link rel="stylesheet" href="../style.css">
-	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
-	
-	<!-- Open Graph Meta Tags -->
-	<meta property="og:url" content="https://jaymehoffman.com/about/">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="About - Jayme Hoffman">
-	<meta property="og:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
-	<meta property="og:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
-	
-	<!-- Twitter Meta Tags -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@jaymehoffman">
-	<meta name="twitter:title" content="About - Jayme Hoffman">
-	<meta name="twitter:description" content="Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur.">
-	<meta name="twitter:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
-	
-	<!-- Scripts -->
-	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<title>Work · Jayme Hoffman</title>
+	<link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
+<nav class="top-nav">
+  <a href="/" class="nav-home">
+    <img src="../static/pfp.png" alt="Jayme Hoffman" />
+  </a>
+  <a href="https://x.com/jaymehoffman/" class="nav-x">𝕏</a>
+</nav>
 <div id="main">
-	<a class="nav" href="/">← Jayme Hoffman</a>
-  <h1>About me</h1>
-  <p>Hi, I'm Jayme Hoffman, a product designer, developer, and entrepreneur. I founded Launcher Labs, A Y Combinator and a16zcrypto-backed company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and Realput and led consumer products for KWRI. I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running and hiking in Texas.</p>
-  <h3>Working on now?</h3>
-  <p>In January	2025, I started working on a new consumer product. I'll share more about it soon.</p>
-  <h3>Products shipped</h3>
+  <h1>Work</h1>
+  <h4>What I'm working on now:</h4>
+  <p>In January	2025, I started working on Swamped, Inc.</p>
+  <h4>Things I've worked on:</h4>
   <ul>
 	<li>
 	  <p><strong>Launcher Labs</strong> (Co-founder & CEO, March 2022 – October 2024)</p>
@@ -56,7 +37,7 @@
 		  <p><a href="https://www.producthunt.com/products/maindrop#maindrop">Maindrop</a> - Venmo for sending NFTs</p>
 		</li>
 		<li>
-		  <p><a href="https://opensea.io/collection/sweetheartznft">Sweetheartz</a> - Valentine’s Day NFTs</p>
+		  <p><a href="https://opensea.io/collection/sweetheartznft">Sweetheartz</a> - Valentine's Day NFTs</p>
 		</li>
 	  </ul>
 	</li>
@@ -104,7 +85,7 @@
 			<p>KW Homeownership</p>
 		  </li>
 		<li>
-		  <p>Agent Sites - World’s largest agent website creator</p>
+		  <p>Agent Sites - World's largest agent website creator</p>
 		</li>
 		<li>
 		  <p>KW Guide + Guide Builder - End-to-end transaction platform</p>
