--- a/lists/index.html
+++ b/lists/index.html
@@ -1,38 +1,20 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="A curated collection of fascinating lists about teams, startups, and persistence.">
-	
 	<title>Lists · Jayme Hoffman</title>
-	
-	<!-- Styles -->
-	<link rel="stylesheet" href="../style.css">
-	<link rel="icon" href="https://pbs.twimg.com/profile_images/1813401294171717632/HHQeIKsi_400x400.jpg" type="image/x-icon">
-	
-	<!-- Open Graph Meta Tags -->
-	<meta property="og:url" content="https://jaymehoffman.com/lists/">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="Lists - Jayme Hoffman">
-	<meta property="og:description" content="A curated collection of fascinating lists about teams, startups, and persistence.">
-	<meta property="og:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
-	
-	<!-- Twitter Meta Tags -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@jaymehoffman">
-	<meta name="twitter:title" content="Lists - Jayme Hoffman">
-	<meta name="twitter:description" content="A curated collection of fascinating lists about teams, startups, and persistence.">
-	<meta name="twitter:image" content="https://i.imgur.com/rbJQ9PG.jpeg">
-	
-	<!-- Scripts -->
-	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
+<nav class="top-nav">
+  <a href="/" class="nav-home">
+    <img src="../static/pfp.png" alt="Jayme Hoffman" />
+  </a>
+  <a href="https://x.com/jaymehoffman/" class="nav-x">𝕏</a>
+</nav>
 <div id="main">
-	<a class="nav" href="/">← Jayme Hoffman</a>
   <h1>Lists</h1>
-  <p>A list of lists I love.</p>
+  <p>Here's a list of lists I love.</p>
   <ul>
 	<li>
 		<p><a href="https://patrickcollison.com/fast">Fast Teams</a> - People quickly accomplishing ambitious things together.</p>
