--- a/work/index.html
+++ b/work/index.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<title>Work · Jayme Hoffman</title>
 	<link rel="stylesheet" href="../static/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
