--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   
   <p>I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running, hiking, and all things Texas.</p>
 
+  <p>I try to live my life with no assumptions untested.</p>
+
   <h3>Links</h3>
 	<ul>
 		<li><a href="/work/">My work</a></li>
