--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <h3>Links</h3>
 	<ul>
-		<li><a href="/work/">My work</a></li>
+		<li><a href="/work/">Work</a></li>
 		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
 		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">JaymeHoffman</a></li>
