--- a/quotes/index.html
+++ b/quotes/index.html
@@ -53,6 +53,10 @@
     <p>— Ray Dalio</p>
   </blockquote>
   <blockquote>
+    <p>Whatever the thing is that you're trying to create what would be the utility delta compared to the current state of the art times how many people it would effect. Having something that makes a big difference but effects small to moderate number of people is great as is something that makes even a small difference but effects a vast number of people.</p>
+    <p>— Elon Musk <a href="https://www.youtube.com/watch?v=Om5XuTbXP1U">🔗</a></p>
+  </blockquote>
+  <blockquote>
     <p>Feedback beats planning. No grand plans, follow the gradient of user value.</p>
     <p>— John Carmack <a href="https://x.com/ID_AA_Carmack/status/1910351545658466794">🔗</a></p>
   </blockquote>
