--- a/work/index.html
+++ b/work/index.html
@@ -16,11 +16,28 @@
 <div id="main">
   <h1>Work</h1>
   <h4>What I'm working on now:</h4>
-  <p>In January	2025, I started working on Swamped, Inc.</p>
+  <ul>
+	<li>
+		<p>Swamped, Inc.</p>
+		<ul>
+			<li>
+				<p>Building on LLMs, exploring the intersection of AI, marketplaces, and crypto.</p>
+			</li>
+		</ul>
+	</li>
+	<li>
+		<p>Slope</p>
+		<ul>
+			<li>
+				<p>Building a tech-focused <a href="https://slope.community/">homeschool community</a> with my better half.</p>
+			</li>
+		</ul>
+	</li>
+  </ul>
   <h4>Things I've worked on:</h4>
   <ul>
 	<li>
-	  <p><strong>Launcher Labs</strong> (Co-founder & CEO, March 2022 – October 2024)</p>
+	  <p>Launcher Labs (Co-founder & CEO, 2022–2024)</p>
 	  <ul>
 		<li>
 		  <p><a href="https://www.launchcaster.xyz/">Launchcaster</a> - Crypto Product Hunt</p>
@@ -43,7 +60,7 @@
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Newzip</strong> (Founder & CEO, January 2021 – March 2022)</p>
+	  <p>Newzip (Founder & CEO, 2021–2022)</p>
   
 	  <ul>
 		<li>
@@ -55,13 +72,13 @@
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Realput</strong> (Founding Advisor, December 2020)</p>
+	  <p>Realput (Founding Advisor, 2020)</p>
 	  <ul>
 		<li>Marketplace for real estate jobs</li>
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Foh&boh</strong> (Founding Advisor, January 2019)</p>
+	  <p>Foh&boh (Founding Advisor, 2019, Acquired by JobGet)</p>
   
 	  <ul>
 		<li>
@@ -73,7 +90,7 @@
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Keller Williams</strong> (PM Consumer, May 2018 – December 2020)</p>
+	  <p>Keller Williams (PM Consumer, 2018–2020)</p>
   
 	  <ul>
 		<li>
@@ -84,17 +101,17 @@
 		</li>
 		<li>
 			<p>KW Homeownership</p>
-		  </li>
-		<li>
-		  <p>Agent Sites - World's largest agent website creator</p>
 		</li>
 		<li>
-		  <p>KW Guide + Guide Builder - End-to-end transaction platform</p>
+			<p>KW Guide - Transaction timeline</p>
+		</li>
+		<li>
+		  <p>Agent Sites - Agent website creator</p>
 		</li>
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Homeward.io</strong> (Co-founder & CEO, August 2016 - April 2018 Acquired by KWRI)</p>
+	  <p>Homeward.io (Co-founder & CEO, 2016-2018, Acquired by Keller Williams)</p>
   
 	  <ul>
 		<li>
@@ -106,7 +123,7 @@
 	  </ul>
 	</li>
 	<li>
-	  <p><strong>Acacia Interactive</strong> (Co-founder & CEO, July 2012 – August 2016)</p>
+	  <p>Acacia Interactive (Co-founder & CEO, 2012–2016)</p>
 	  <ul>
 		<li>
 		  <p><a href="https://youtu.be/5WluA7yryto?si=41uPqpMGIsFsblBv">Fetch</a> - Animated messaging</p>
