--- a/quotes/index.html
+++ b/quotes/index.html
@@ -45,6 +45,10 @@
     <p>— Eleanor Roosevelt</p>
   </blockquote>
   <blockquote>
+    <p>Everybody wanna be a bodybuilder but aint no body wanna lift these heavy ass weights</p>
+    <p>— Ronnie Coleman <a href="https://youtu.be/4UlgXIL0-3g?si=10iyxhpkDNFWHlsf">🔗</a></p>
+  </blockquote>
+  <blockquote>
     <p>Great stories happen to those who can tell them.</p>
     <p>— Ira Glass</p>
   </blockquote>
