--- a/work/index.html
+++ b/work/index.html
@@ -21,7 +21,7 @@
 		<p>Swamped, Inc.</p>
 		<ul>
 			<li>
-				<p>Building on LLMs, exploring the intersection of AI, marketplaces, and crypto.</p>
+				<p>In january 2025, I started a new company. We're working on new stuff at the intersection of AI, marketplaces, and crypto.</p>
 			</li>
 		</ul>
 	</li>
@@ -29,7 +29,7 @@
 		<p>Slope</p>
 		<ul>
 			<li>
-				<p>Building a tech-focused <a href="https://slope.community/">homeschool community</a> with my better half.</p>
+				<p>Building a <a href="https://slope.community/">homeschool community</a> with my better half.</p>
 			</li>
 		</ul>
 	</li>
