--- a/work/index.html
+++ b/work/index.html
@@ -21,7 +21,7 @@
 		<p>Swamped, Inc.</p>
 		<ul>
 			<li>
-				<p>In january 2025, I started a new company. We're working on new stuff at the intersection of AI, marketplaces, and crypto.</p>
+				<p>In January 2025, I started a new company. We're working on new stuff at the intersection of AI, marketplaces, and crypto.</p>
 			</li>
 		</ul>
 	</li>
@@ -100,10 +100,13 @@
 		  <p><a href="https://apps.apple.com/us/app/kw-buy-sell-real-estate/id652512924">KW App</a></p>
 		</li>
 		<li>
-			<p>KW Homeownership</p>
+			<p><a href="https://www.kw.com/agents">Agent search</a></p>
 		</li>
 		<li>
-			<p>KW Guide - Transaction timeline</p>
+			<p>Homeownership</p>
+		</li>
+		<li>
+			<p>Guide - Transaction timeline</p>
 		</li>
 		<li>
 		  <p>Agent Sites - Agent website creator</p>
@@ -123,6 +126,15 @@
 	  </ul>
 	</li>
 	<li>
+		<p>PrimeMD (Side project, 2016)</p>
+		<ul>
+			<li>
+				<p><a href="https://www.onclive.com/view/primemd-a-pain-reporting-smartphone-application-for-patients-undergoing-head-and-neck-radiation">Radiation pain reporting app</a></p>
+			</li>
+			
+		</ul>
+	</li>
+	<li>
 	  <p>Acacia Interactive (Co-founder & CEO, 2012–2016)</p>
 	  <ul>
 		<li>
@@ -132,7 +144,7 @@
 		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/084/45084-42a85d5c875873c9a723a88d46a5c19b9a2c03b3.jpeg?1565316537">Wax 2.0</a> - Mobile video competitions</p>
 		</li>
 		<li>
-		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/083/45083-e7374be234b89cc13e302b5aa2df83a07bd5417c.jpeg?1565316537">Kiwi</a> - Short square mobile videos</p>
+		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/083/45083-e7374be234b89cc13e302b5aa2df83a07bd5417c.jpeg?1565316537">Kiwi</a> - Short square looping videos</p>
 		</li>
 		<li>
 		  <p><a href="https://wellfound.com/cdn-cgi/image/width=2560,height=1600,fit=scale-down,gravity=0.5x0.5,quality=90,format=auto/https://d2gn4xht817m0g.cloudfront.net/p/media_uploads/images/original/000/045/082/45082-891b02c541dc8cfda4301900fc239339a57e484c.jpeg?1565316537">Wax 1.0</a> - Tony Hawk IRL video competitions</p>
