--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
   <p>Previously, I founded Launcher Labs, a Y Combinator and a16zcrypto-backed company. Before that, I founded Homeward.io (acquired by Keller Williams), Fohandboh (acquired by JobGet), and a few other things.</p>
   
-  <p>I live in Austin, TX, with my wife and two children. When I'm not working or hanging out with my family, I love trail running, hiking, and all things Texas.</p>
+  <p>I live in Austin, TX, with my wife and two children, whom we homeschool. When I'm not working or hanging out with my family, I love trail running, hiking, and all things Texas.</p>
 
   <p>I try to live my life with no assumptions untested.</p>
 
-  <h3>Links</h3>
+  <p>Here's <a href="/work/">my work</a> and occasional <a href="/blog/">writing</a>. 
+
 	<ul>
-		<li><a href="/work/">Work</a></li>
 		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
 		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">JaymeHoffman</a></li>
