small changes to work

--- a/work/index.html
+++ b/work/index.html
@@ -29,7 +29,7 @@
 		<p>Slope</p>
 		<ul>
 			<li>
-				<p>Building a <a href="https://slope.community/">homeschool community</a> with my better half.</p>
+				<p>Building a tech-focused homeschool community with my better half.</p>
 			</li>
 		</ul>
 	</li>
