--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p>Here's <a href="/work/">my work</a> and occasional <a href="/blog/">writing</a>. 
 
 	<ul>
-		<li>Farcaster: <a href="https://warpcast.com/jayme">@Jayme</a></li>
+		<li>Farcaster: <a href="https://farcaster.xyz/jayme">@Jayme</a></li>
 		<li>X: <a href="https://x.com/jaymehoffman/">@JaymeHoffman</a></li>
 		<li>LinkedIn: <a href="https://www.linkedin.com/in/jaymehoffman/">JaymeHoffman</a></li>
 	</ul>
