--- a/work/index.html
+++ b/work/index.html
@@ -18,10 +18,10 @@
   <h4>What I'm working on now:</h4>
   <ul>
 	<li>
-		<p>Swamped, Inc.</p>
+		<p>NewCo</p>
 		<ul>
 			<li>
-				<p>In January 2025, I started a new company. We're working on new stuff at the intersection of AI, marketplaces, and crypto.</p>
+				<p>Started a new company in January 2025 exploring AI, marketplaces, and crypto.</p>
 			</li>
 		</ul>
 	</li>
