--- a/work/index.html
+++ b/work/index.html
@@ -21,15 +21,18 @@
 		<p>NewCo</p>
 		<ul>
 			<li>
-				<p>Started a new company in January 2025 exploring AI, marketplaces, and crypto.</p>
+				<p>Working on a new AI-powered consumer marketplace.</p>
 			</li>
 		</ul>
 	</li>
 	<li>
-		<p>Slope</p>
+		<p>Side projects</p>
 		<ul>
 			<li>
-				<p>Building a tech-focused homeschool community with my better half.</p>
+				<p>Rubicon Founders - Advising stealth consumer AI health insurance product.</p>
+			</li>
+			<li>
+				<p><a href="https://farcaster.xyz/miniapps/pfX_X3-91aqo/tbpn">TBPN Mini App</a> - Built the <a href="https://www.youtube.com/live/wTl1ISMqph0?si=sYJU9KPRgqwTpVBK&t=14500">authorized pirate feed</a> of TBPN on Farcaster.</p>
 			</li>
 		</ul>
 	</li>
